--- a/fsesrc-submission.tex
+++ b/fsesrc-submission.tex
@@ -128,9 +128,10 @@ Furthermore, type-checking is modular and fast.
 % Figure appears late in the LaTeX file to prevent it from being placed in
 % the first column of the paper.
 \begin{figure}
+\vspace{-10pt}
 \begin{lstlisting}
-byte x = 0xFF; // Unsigned 255, Signed -1
-byte y = 0xFE; // Unsigned 254, Signed -2
+byte x = 0xFF; // Signed -1, Unsigned 255
+byte y = 0xFE; // Signed -2, Unsigned 254
 
 byte sub = x - y;
 // Result is 1, which is correct when:
@@ -152,6 +153,7 @@ byte div = y / x;
 \begin{figure}
     \centering
     \includegraphics[width=0.4\textwidth]{signedness}
+\vspace{-10pt}
     \caption{The type qualifier hierarchy of the signedness annotations.
 The default annotation is \<@Signed>.
 Qualifiers in gray are used internally by the type system and need not be
@@ -241,16 +243,12 @@ The Signedness Checker is distributed as part of the Checker Framework
 
 \begin{figure}
 \begin{lstlisting}
-
-/*
- * The Signedness Checker issues a
- * warning for each of the following
- * lines because a signed int is
- * right shifted with an unsigned
- * right shift. In reality this is
- * fine because all of the introduced
- * bits are masked off.
- */
+// The Signedness Checker issues a warning
+// for each of the following lines because
+// a signed int is right-shifted with an
+// unsigned right shift. In reality this is
+// fine because all of the introduced bits
+// are masked off.
 
 sb.data[i++] = (byte) ((c >>> 8) & 0xff);
 sb.data[i++] = (byte) ((c >>> 16) & 0xff);
@@ -300,15 +298,11 @@ integers in Java.
 
 \begin{figure}
 \begin{lstlisting}
-
-/*
- * Both out.firstleafbrush and
- * out.numleafbrushes are Unsigned integers.
- * The method Vargs::add(int) expects a Signed
- * integer by default and therefore the
- * Signedness Checker issues a
- * warning here.
- */
+// out.firstleafbrush and out.numleafbrushes
+// are unsigned integers.
+// The method Vargs::add(int) expects a signed
+// integer and therefore the Signedness Checker
+// issues a warning.
 
 if (debugloadmap) {
   Com.DPrintf("|%8x|%6i|%6i|%6i|\n",
@@ -322,8 +316,7 @@ if (debugloadmap) {
 
 \end{lstlisting}
 \vspace{-10pt}
-\caption{An example of code for which the Signedness Checker will issue a false
-alarm, from our case study of jake2.}
+\caption{Buggy code in jake2 that the Signedness Checker identified.}
 \label{fig:bug}
 \end{figure}
 
