Put figures at top of column

--- a/fsesrc-submission.tex
+++ b/fsesrc-submission.tex
@@ -316,7 +316,7 @@ alarm, from our case study of jake2.}
 \label{fig:false-alarm}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[t]
 \begin{lstlisting}
 // out.firstleafbrush and out.numleafbrushes are unsigned
 // ints. The method Vargs::add(int) expects a signed int
