--- a/fsesrc-submission.tex
+++ b/fsesrc-submission.tex
@@ -79,13 +79,15 @@ Christopher A. Mackie\\
 
 Signed integers use the first bit of the machine representation to
 represent the sign of a value.  Unsigned integers use all
-bits of the machine representation to represent the magnitude of a value allowing them to
-represent a larger range of positive numbers than signed integers at the cost of
-representing negative numbers.
+bits of the machine representation to represent the magnitude of a value.
+Unsigned integers can 
+represent a larger range of positive numbers than signed integers, but
+cannot represent negative numbers.
 Unsigned integers are useful, so many programming languages support them;
-for example, Java 8 provides utility methods for unsigned
-integers~\cite{JDK8UnsignedIntegerArithmetic2012}.  However, they are also
-error-prone; using an unsigned integer where a signed
+for example, Java 8 introduced utility methods for unsigned
+integers~\cite{JDK8UnsignedIntegerArithmetic2012}.  However, unsigned
+integers are also
+error-prone:  using an unsigned integer where a signed
 one is expected, or performing certain arithmetic operations and
 comparisons on unsigned integers, can lead to unexpected results.
 
@@ -225,12 +227,12 @@ construction of pluggable type systems for Java.
 The Signedness Checker is distributed as part of the Checker Framework
 \url{http://CheckerFramework.org/}, starting with version 2.1.0.
 
-Our pluggable type system implementaion consists of the following parts:
+Our pluggable type system implementation consists of the following parts:
 
 \begin{itemize}\itemsep 0pt \parskip 0pt
   \item Type qualifiers are implemented declaratively as Java 8 type
     annotations~\cite{JSR308-PFD}.
-  \item Type indroduction rules are defined procedurally.
+  \item Type introduction rules are defined procedurally.
   \item Type rules are enforced by a traversal of the syntax tree.
 \end{itemize}
 
@@ -273,7 +275,7 @@ could accomplish the same result less than a week.
 
 SmartFuzz~\cite{MolnarLW2009} generates tests that are intended to expose
 integer bugs, including signed/unsigned conversion.  For each program
-execution, it generates and solves a set of contraints that assigns each
+execution, it generates and solves a set of constraints that assigns each
 integer to a lattice containing Top, Signed, Unsigned, and Bottom.
 SmartFuzz incorrectly under-constrains some operations such as x86's
 \<IMUL>.  It uses Valgrind to partition integers into union-find sets and
@@ -345,4 +347,6 @@ if (debugloadmap) {
 \end{document}
 
 %  LocalWords:  papersize Signedness Mackie signedness javac's jake2 90s
-%  LocalWords:  UnknownSignedness SignednessBottom
+%  LocalWords:  UnknownSignedness SignednessBottom jake II's SmartFuzz sb
+%  LocalWords:  IMUL CatchConv firstleafbrush numleafbrushes ints DPrintf
+%  LocalWords:  debugloadmap Vargs ernst invariants
